@@ -1,15 +1,4 @@
 IF(UNIX)
-  add_definitions(-DLINUX_BUILD)
-  SET(CMAKE_CXX_FLAGS_DEBUG "-g -Wall")
-  SET(CMAKE_CXX_FLAGS "-fvisibility=hidden")
-  SET(CMAKE_C_FLAGS "-fvisibility=hidden")
-  IF(DFHACK_BUILD_64)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m64 -mno-avx")
-    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m64 -mno-avx")
-  ELSE()
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
-    SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
-  ENDIF()
   IF(NOT APPLE)
     # Linux: Check for unresolved symbols at link time
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wl,-z,defs")
